--- a/final_project1.0/bin/Main.fxml
+++ b/final_project1.0/bin/Main.fxml
@@ -8,7 +8,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="36.0" prefWidth="78.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logController">
    <children>
-      <Label id="notiLabel" fx:id="notiLabel" alignment="TOP_LEFT" layoutX="12.0" layoutY="9.0" prefHeight="27.0" prefWidth="55.0" text="Hello ~~!" textFill="#e10909">
+      <Label id="notiLabel" fx:id="notiLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="9.0" prefHeight="27.0" prefWidth="55.0" text="Hello ~~!" textFill="#e10909">
          <font>
             <Font size="12.0" />
          </font>
