--- a/final_project/src/FXML.fxml
+++ b/final_project/src/FXML.fxml
@@ -9,11 +9,11 @@
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="560.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerLogin">
 	<children>
-		<TextField id="txAccount" fx:id="txAccount" layoutX="342.0" layoutY="157.0" onAction="#actLogin" prefHeight="27.0" prefWidth="194.0" promptText="Your username" />
-		<TextField id="txPassword" fx:id="txPassword" layoutX="342.0" layoutY="220.0" onAction="#actLogin" prefHeight="27.0" prefWidth="194.0" />
+		<TextField id="txAccount" fx:id="txAccount" layoutX="342.0" layoutY="157.0"  prefHeight="27.0" prefWidth="194.0" promptText="Your username" />
+		<TextField id="txPassword" fx:id="txPassword" layoutX="342.0" layoutY="220.0"  prefHeight="27.0" prefWidth="194.0" />
 		<Button id="logButton" fx:id="logButton" layoutX="480.0" layoutY="320.0" mnemonicParsing="false" onAction="#actLogin" text="Log in" />
 		<Button layoutX="253.0" layoutY="320.0" mnemonicParsing="false" text="Change password" />
-		<Button layoutX="253.0" layoutY="279.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="146.0" text="Create Account" />
+		<Button layoutX="253.0" layoutY="279.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="146.0" text="Create Account" onAction="#actCreateAcc"/>
 		<Label layoutX="255.0" layoutY="162.0" text="Account : " />
 		<Label layoutX="255.0" layoutY="225.0" text="Password : " />
 		<TextArea layoutX="22.0" layoutY="29.0" prefHeight="329.0" prefWidth="200.0" text="Fast &amp; convenient chat system...&#10;&#10;&#10;&#10;Welcome to QuickChat !&#10;&#10;&#10;---------------------------------&#10;News:&#10;&#10;1.new funtion...&#10;2.latest version open...&#10;&#10;&#10;&#10;&#10;#ver1.1" />
