--- a/final_project/src/logPage.fxml
+++ b/final_project/src/logPage.fxml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
-   <children>
-      <TextField layoutX="342.0" layoutY="157.0" prefHeight="27.0" prefWidth="194.0" />
-      <TextField layoutX="342.0" layoutY="220.0" prefHeight="27.0" prefWidth="194.0" />
-      <Button fx:id="logButton"  layoutX="480.0" layoutY="320.0" mnemonicParsing="false" text="Log in" />
-      <Button layoutX="253.0" layoutY="320.0" mnemonicParsing="false" text="Change password" />
-      <Button layoutX="253.0" layoutY="279.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="128.0" text="Create Account" />
-      <Label layoutX="255.0" layoutY="162.0" text="Account : " />
-      <Label layoutX="255.0" layoutY="225.0" text="Password : " />
-      <TextArea layoutX="22.0" layoutY="23.0" prefHeight="329.0" prefWidth="200.0" text="Fast &amp; convenient chat system...&#10;&#10;&#10;&#10;Welcome to QuickChat !&#10;&#10;&#10;---------------------------------&#10;News:&#10;&#10;1.new funtion...&#10;2.latest version open...&#10;&#10;&#10;&#10;&#10;#ver1.1" />
-   </children>
-</Pane>
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="560.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerLogin">
+	<children>
+		<TextField id="txAccount" fx:id="txAccount" layoutX="342.0" layoutY="157.0" prefHeight="27.0" prefWidth="194.0" promptText="Your username" />
+		<TextField id="txPassword" fx:id="txPassword" layoutX="342.0" layoutY="220.0" prefHeight="27.0" prefWidth="194.0" />
+		<Button id="logButton" fx:id="logButton" layoutX="480.0" layoutY="320.0" mnemonicParsing="false" onAction="#actLogin" text="Log in" />
+		<Button layoutX="252.0" layoutY="320.0" mnemonicParsing="false" onAction="#actCreateAcc" prefHeight="30.0" prefWidth="146.0" text="Create Account" />
+		<Label layoutX="255.0" layoutY="162.0" text="Account : " />
+		<Label layoutX="255.0" layoutY="225.0" text="Password : " />
+		<TextArea layoutX="22.0" layoutY="29.0" prefHeight="329.0" prefWidth="200.0" text="Fast &amp; convenient chat system...&#10;&#10;&#10;&#10;Welcome to QuickChat !&#10;&#10;&#10;---------------------------------&#10;News:&#10;&#10;1.new funtion...&#10;2.latest version open...&#10;&#10;&#10;&#10;&#10;#ver1.1" />
+      <TextField id="txNotic" fx:id="txNotic" alignment="TOP_CENTER" editable="false" layoutX="280.0" layoutY="106.0" prefHeight="32.0" prefWidth="255.0" style="-fx-border-color: #F5F5F5; -fx-background-color: #F5F5F5; -fx-font-style: #000000;">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </TextField>
+	</children>
+</AnchorPane>
