--- a/final_project/src/mainPage.fxml
+++ b/final_project/src/mainPage.fxml
@@ -7,18 +7,26 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerLobby">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="600.0" style="-fx-background-color: #F5F5F5;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerLobby">
 	<children>
-		<TextField id="txInput" fx:id="txInput" layoutX="3.0" layoutY="329.0" prefHeight="62.0" prefWidth="303.0" />
-		<Button id="btnSubmit" fx:id="btnSubmit" layoutX="319.0" layoutY="343.0" mnemonicParsing="false" onAction="#actSubmit" text="submit" />	
+		<TextField id="txInput" fx:id="txInput" layoutX="16.0" layoutY="331.0" prefHeight="62.0" prefWidth="290.0" />
+		<Button id="btnSubmit" fx:id="btnSubmit" layoutX="317.0" layoutY="347.0" mnemonicParsing="false" onAction="#actSubmit" text="submit" />	
 		<Label layoutX="459.0" layoutY="20.0" prefHeight="27.0" prefWidth="127.0" text="Online member" />
 		<Label layoutX="14.0" layoutY="24.0" text="Lobby" />
       <ScrollBar layoutX="288.0" layoutY="331.0" orientation="VERTICAL" prefHeight="30.0" prefWidth="18.0" />
-      <TextArea id="txOutput" fx:id="txOutput" editable="false" layoutX="14.0" layoutY="61.0" prefHeight="253.0" prefWidth="357.0">
+      <TextArea id="txOutput" fx:id="txOutput" editable="false" layoutX="16.0" layoutY="61.0" prefHeight="253.0" prefWidth="357.0">
          <cursor>
             <Cursor fx:constant="MOVE" />
          </cursor>
       </TextArea>
-      <ListView id="lvUserList" fx:id="lvUserList" layoutX="400.0" layoutY="61.0" prefHeight="330.0" prefWidth="190.0" />
+      <ListView id="lvUserList" fx:id="lvUserList" layoutX="400.0" layoutY="61.0" prefHeight="253.0" prefWidth="190.0" />
+      <Button fx:id="brConnect" layoutX="507.0" layoutY="347.0" mnemonicParsing="false" onAction="#actConnect" text="Connect" />
+      <TextField id="txNotic" fx:id="txNotic" alignment="TOP_CENTER" editable="false" layoutX="78.0" layoutY="19.0" prefHeight="30.0" prefWidth="357.0" style="-fx-border-color: #F5F5F5; -fx-background-color: #F5F5F5; -fx-font-style: #000000;">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </TextField>
+      <Button id="btnPain" fx:id="btnPaint" layoutX="409.0" layoutY="331.0" mnemonicParsing="false" onAction="#actPaint" text="Paint" />
+      <Button layoutX="409.0" layoutY="366.0" mnemonicParsing="false" onAction="#actGame" text="Game" />
 	</children>
 </Pane>
