--- a/final_project/src/pvtMessage.fxml
+++ b/final_project/src/pvtMessage.fxml
@@ -5,12 +5,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="324.0" prefWidth="444.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="324.0" prefWidth="444.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerPtvMessage">
    <children>
-      <Button layoutX="320.0" layoutY="248.0" mnemonicParsing="false" text="submit" />
-      <TextField layoutX="65.0" layoutY="248.0" prefHeight="27.0" prefWidth="230.0" />
-      <TextArea layoutX="65.0" layoutY="44.0" prefHeight="188.0" prefWidth="312.0" />
+      <Button layoutX="320.0" layoutY="248.0" mnemonicParsing="false" onAction="#actPtvSubmit" text="submit" />
+      <TextField id="txPtvInput" fx:id="txPtvInput" layoutX="65.0" layoutY="248.0" prefHeight="27.0" prefWidth="230.0" />
+      <TextArea id="txPtvOutput" fx:id="txPtvOutput" editable="false" layoutX="65.0" layoutY="44.0" prefHeight="188.0" prefWidth="312.0" />
       <Label layoutX="204.0" layoutY="20.0" text="Private" />
    </children>
 </Pane>
