--- a/final_project1.0/src/Sample.fxml
+++ b/final_project1.0/src/Sample.fxml
@@ -8,14 +8,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@application/application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TextField layoutX="364.0" layoutY="158.0" prefHeight="27.0" prefWidth="194.0" />
       <TextField layoutX="364.0" layoutY="221.0" prefHeight="27.0" prefWidth="194.0" />
       <Button layoutX="480.0" layoutY="320.0" mnemonicParsing="false" text="Log in" />
       <Button layoutX="253.0" layoutY="320.0" mnemonicParsing="false" text="Change password" />
-      <Button layoutX="253.0" layoutY="279.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="128.0" text="Create Account" />
+      <Button layoutX="253.0" layoutY="279.0" mnemonicParsing="false" onAction="#actCreateAcc" prefHeight="27.0" prefWidth="128.0" text="Create Account" />
       <Label layoutX="275.0" layoutY="162.0" text="Account : " />
       <Label layoutX="276.0" layoutY="225.0" text="Password : " />
       <TextArea layoutX="22.0" layoutY="23.0" prefHeight="329.0" prefWidth="200.0" text="Fast &amp; convenient chat system...&#10;&#10;&#10;&#10;Welcome to QuickChat !&#10;&#10;&#10;---------------------------------&#10;News:&#10;&#10;1.new funtion...&#10;2.latest version open...&#10;&#10;&#10;&#10;&#10;#ver1.1" />
